[gd_scene load_steps=12 format=2]

[ext_resource path="res://Drone/Killer Turret/Ammo Belt/Ammo0.png" type="Texture" id=1]
[ext_resource path="res://Drone/Killer Turret/Ammo Belt/Ammo3.png" type="Texture" id=2]
[ext_resource path="res://Drone/Killer Turret/Ammo Belt/Ammo2.png" type="Texture" id=3]
[ext_resource path="res://Drone/Killer Turret/TurretBarrel.png" type="Texture" id=4]
[ext_resource path="res://Drone/Killer Turret/Ammo Belt/Ammo1.png" type="Texture" id=5]
[ext_resource path="res://Drone/Killer Turret/Ammo Belt/Ammo4.png" type="Texture" id=6]
[ext_resource path="res://Drone/Killer Turret/TurretSwivel.png" type="Texture" id=7]
[ext_resource path="res://Drone/Killer Turret/Ammo Belt/Ammo5.png" type="Texture" id=8]
[ext_resource path="res://Drone/Killer Turret/KillerTurret.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "shot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Barrel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -15, 0 ), Vector2( 0, 0 ) ]
}

[node name="KillerTurret" type="Sprite"]
z_index = 1
texture = ExtResource( 7 )
script = ExtResource( 9 )

[node name="Barrel" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -15, 0 )
texture = ExtResource( 4 )
offset = Vector2( 70, 0 )

[node name="AmmoBelt" type="AnimatedSprite" parent="."]
position = Vector2( 20, 53 )
frames = SubResource( 1 )
frame = 4
playing = true

[node name="Bullet" type="Line2D" parent="."]
show_behind_parent = true
z_index = -1
points = PoolVector2Array( 0, 0, 100, 0 )
width = 20.0
default_color = Color( 1, 1, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bullet"]
anims/shot = SubResource( 2 )

[node name="FireRate" type="Timer" parent="."]
one_shot = true

[node name="LostTarget" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="timeout" from="LostTarget" to="." method="_on_LostTarget_timeout"]
